# GPTpedia

./: .flake8  Makefile  README.md  demo_app.py  pyproject.toml  requirements.txt
gptpedia/modules/: constants.py  entities.py
gptpedia/modules/models/: context_search.py  generation_base_pipeline.py  qna_pipeline.py
gptpedia/modules/page_search/: base.py  google.py  wiki.py  wiki_extended.py
gptpedia/modules/text_parser/: base.py  wiki_parser.py
gptpedia/modules/text_search/: base.py  vector.py
wikigpt/modules/: constants.py  entities.py  utils.py
wikigpt/modules/models/: qna_pipeline.py
wikigpt/modules/page_search/: base.py  google.py  wiki.py  wiki_extended.py
wikigpt/modules/text_parser/: base.py  wiki_parser.py
wikigpt/modules/text_search/: base.py  vector.py
